cmake_minimum_required(VERSION 3.10)
PROJECT(GLEX VERSION 0.0.1)
SET(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
set(GLEX_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(GLEX_CORE_INCLUDE_DIRECTORY core)
#MESSAGE("cmake dir : ${CMAKE_BINARY_DIR}")
add_subdirectory(core)
add_subdirectory(examples)