cmake_minimum_required(VERSION 3.10)
PROJECT(GLEX VERSION 0.0.1)
SET(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin/")
set(GLEX_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
set(GLEX_CORE_INCLUDE_DIRECTORY core)
set(GLEX_STB_INCLUDE_DIRECTORY ${PROJECT_SOURCE_DIR}/external)
# set(GLEX_ASSIMP_INCLUDE_DIRECTORY ${PROJECT_SOURCE_DIR}/submodules/assimp/include/)
# set(GLEX_GLM_INCLUDE_DIRECTORY ${PROJECT_SOURCE_DIR}/submodules/glm/include/)
#MESSAGE("cmake dir : ${CMAKE_BINARY_DIR}")
# MESSAGE("GLEX_ASSIMP_INCLUDE_DIRECTORY :  ${GLEX_ASSIMP_INCLUDE_DIRECTORY}")
# find_package(assimp)
IF(UNIX)
	#LINK_DIRECTORIES(/usr/lib /usr/local/lib)
	#INCLUDE_DIRECTORIES(/usr/include /usr/local/include )
	#INCLUDE_DIRECTORIES(external)
	INCLUDE_DIRECTORIES(${GLEX_STB_IMAGE_DIRECTORY})
ENDIF(UNIX)
add_subdirectory(submodules/assimp)
add_subdirectory(core)
add_subdirectory(examples)