cmake_minimum_required(VERSION 3.10)
PROJECT(GLEX_CORE VERSION 0.0.1)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)
SET(GLEX_CORE_LIB_NAME glexlib)

IF(UNIX)
	#INCLUDE_DIRECTORIES(/usr/local/include 	/usr/include ${STB_IMAGE_DIRECTORY})
	INCLUDE_DIRECTORIES(
		${GLEX_GLM_INCLUDE_DIRECTORY} 
		${GLEX_STB_INCLUDE_DIRECTORY} 
		# ${GLEX_ASSIMP_INCLUDE_DIRECTORY}
	)
	MESSAGE("UNIX OPTION")
	find_package(glfw3)
ENDIF(UNIX)

MESSAGE("GLEX_GLM_INCLUDE_DIRECTORY : ${GLEX_GLM_INCLUDE_DIRECTORY}")
MESSAGE("GLEX_STB_INCLUDE_DIRECTORY : ${GLEX_STB_INCLUDE_DIRECTORY}")
MESSAGE("GLEX_ASSIMP_INCLUDE_DIRECTORY : ${GLEX_ASSIMP_INCLUDE_DIRECTORY}")

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${GLEX_LIBRARY_OUTPUT_DIRECTORY})

#MESSAGE ( ${CMAKE_PROJECT_NAME} )

SET(PROJECT_SRC
	base_window.cpp
	camera.cpp
	shader.cpp	
	utility.cpp
	mesh.cpp
	model.cpp
	mesh.cpp
)

if(APPLE)
	LINK_LIBRARIES(glfw assimp "-framework OpenGL")
elseif(UNIX)
	LINK_LIBRARIES(glfw GL assimp pthread)
endif()
ADD_LIBRARY(glexlib STATIC ${PROJECT_SRC})

IF(APPLE)
	TARGET_LINK_LIBRARIES(glexlib glfw assimp "-framework OpenGL")
ELSEIF(UNIX)
	TARGET_LINK_LIBRARIES(glexlib glfw GL assimp pthread)
ENDIF()
# TARGET_LINK_LIBRARIES(glexlib glfw3)